--- a/dp2-frontend/package.json
+++ b/dp2-frontend/package.json
@@ -14,6 +14,7 @@
     "@rollup/plugin-alias": "^5.0.0",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.5",
     "chart.js": "^4.2.1",
     "formik": "^2.2.9",
     "fuse.js": "^6.6.2",
@@ -26,6 +27,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "uuid": "^9.0.0",
