--- a/dp2-frontend/package.json
+++ b/dp2-frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.1.9",
     "@reduxjs/toolkit": "^1.9.5",
     "@rollup/plugin-alias": "^5.0.0",
     "axios": "^1.3.5",
@@ -17,6 +18,7 @@
     "chart.js": "^4.3.0",
     "formik": "^2.2.9",
     "fuse.js": "^6.6.2",
+    "html2pdf.js": "^0.10.1",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
