--- a/dp2-frontend/package.json
+++ b/dp2-frontend/package.json
@@ -16,9 +16,10 @@
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.3.0",
+    "dom-to-image": "^2.6.0",
     "formik": "^2.2.9",
     "fuse.js": "^6.6.2",
-    "html2pdf.js": "^0.10.1",
+    "jspdf": "^2.5.1",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
