--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -11,6 +11,10 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+  
+    defaults:
+      run:
+         working-directory: ./dp2-frontend/
 
     strategy:
       matrix:
@@ -19,8 +23,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Navigate to directory
-      run: cd ./dp2-frontend
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
