--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -1,33 +1,46 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
+This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
+For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-# name: Node.js CI
+name: Node.js CI
 
-# on:
-#   push:
-#     branches: [ "main" ]
+on:
+  push:
+    branches: [ "main" ]
 
-# jobs:
-#   build:
+jobs:
+  build:
 
-#     runs-on: self-hosted
+    runs-on: ubuntu-latest
   
-#     defaults:
-#       run:
-#          working-directory: ./dp2-frontend/
+    defaults:
+      run:
+         working-directory: ./dp2-frontend/
 
-#     strategy:
-#       matrix:
-#         node-version: [18.x]
-#         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+    strategy:
+      matrix:
+        node-version: [18.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
-#     steps:
-#     - uses: actions/checkout@v3
-#     - name: Use Node.js ${{ matrix.node-version }}
-#       uses: actions/setup-node@v3
-#       with:
-#         node-version: ${{ matrix.node-version }}
-#         cache: 'npm'
-#         cache-dependency-path: './dp2-frontend/package-lock.json'
-#     - run: npm ci
-#     - run: npm run build --if-present
+    steps:
+    - uses: actions/checkout@v3
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+        cache-dependency-path: './dp2-frontend/package-lock.json'
+    - run: npm ci
+    - run: npm run build --if-present
+
+  deploy:
+    needs: [build]
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: react-app-deploy
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.SSH_PRIVATE_KEY }}
+          key: ${{ secrets.SSH_HOST}}
+      - name: Copy file to EC2 instance
+        run: sudo scp -r dist ${{ secrets.SSH_HOST }}:/var/www/html
