--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -38,7 +38,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
   
     - name: Install SSH client
       run: sudo apt-get install openssh-client -y
@@ -51,4 +51,4 @@ jobs:
         ssh-keyscan -t rsa ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
     - name: Copy file to EC2 instance
-      run: scp -r dist ${{ secrets.SSH_HOST }}:/var/www/html
+      run: rsync -r -e "ssh -o StrictHostKeyChecking=no" dist ${{ secrets.SSH_HOST }}:/var/www/html
