--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -42,6 +42,12 @@ jobs:
   
     - name: Install SSH client
       run: sudo apt-get install openssh-client -y
+
+    - name: show SSH_PRIVATE_KEY
+      run: echo ${{ secrets.SSH_PRIVATE_KEY }}
+
+    - name: show SSH_HOST
+      run: echo ${{ secrets.SSH_HOST }}
     
     - name: Set up SSH
       run: |
