--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -40,21 +40,17 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
   
-    - name: Install SSH client
-      run: sudo apt-get install openssh-client -y
+    - name: Install SSH Key
+      uses: shimataro/ssh-key-action@v2
+      with:
+        key: {%- raw -%} ${{ secrets.SSH_PRIVATE_KEY }}
+        known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
 
-    - name: show SSH_PRIVATE_KEY
-      run: echo ${{ secrets.SSH_PRIVATE_KEY }}
+    - name: Adding Known Hosts
+      run: ssh-keyscan -H ${{ secrets.SSH_HOST }}{% endraw%} >> ~/.ssh/known_hosts
 
-    - name: show SSH_HOST
-      run: echo ${{ secrets.SSH_HOST }}
-    
-    - name: Set up SSH
-      run: |
-        mkdir -p ~/.ssh/
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-        chmod 600 ~/.ssh/id_rsa
-        ssh-keyscan -t rsa ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+    - name: Deploy with rsync
+      run: rsync -avz ./dist/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/ubuntu/app-react
 
-    - name: Copy file to EC2 instance
-      run: rsync -r -e "ssh -o StrictHostKeyChecking=no" dist ${{ secrets.SSH_HOST }}:/var/www/html
+    # - name: Copy file to EC2 instance
+    #   run: rsync -r -e "ssh -o StrictHostKeyChecking=no" dist ${{ secrets.SSH_HOST }}:/var/www/html
