--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -2,8 +2,7 @@ name: PR check
 
 on:
   pull_request:
-    branches: 
-      - Grupo4
+    branches: [ "Grupo1", "Grupo2", "Grupo3", "Grupo4" ]
 
 jobs:
   check_build_status:
