--- a/dp2-frontend/package.json
+++ b/dp2-frontend/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "watch-tsc": "tsc --watch --noEmit",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "compile:sass": "sass --watch src/assets/scss:src/assets/css"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
@@ -42,6 +42,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "sass": "^1.62.1",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
     "vitest": "^0.30.1"
