--- a/dp2-frontend/package.json
+++ b/dp2-frontend/package.json
@@ -10,6 +10,7 @@
     "compile:sass": "sass --watch src/assets/scss:src/assets/css"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.0",
     "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^1.9.5",
     "@rollup/plugin-alias": "^5.0.0",
@@ -31,6 +32,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-hook-form": "^7.44.3",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
