--- a/dp2-frontend/package.json
+++ b/dp2-frontend/package.json
@@ -20,6 +20,7 @@
     "chart.js": "^4.3.0",
     "classnames": "^2.3.2",
     "dom-to-image": "^2.6.0",
+    "export-from-json": "^1.7.2",
     "formik": "^2.2.9",
     "fuse.js": "^6.6.2",
     "jspdf": "^2.5.1",
@@ -30,6 +31,7 @@
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-icons": "^1.10.3",
     "react-chartjs-2": "^5.2.0",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.44.3",
