--- a/dp2-frontend/package.json
+++ b/dp2-frontend/package.json
@@ -36,6 +36,7 @@
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
+    "react-toastify": "^9.1.3",
     "simplebar-react": "^3.2.4",
     "uuid": "^9.0.0",
     "vite-tsconfig-paths": "^4.2.0",
