--- a/dp2-frontend/package.json
+++ b/dp2-frontend/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
     "chart.js": "^4.3.0",
+    "choices.js": "^10.2.0",
     "classnames": "^2.3.2",
     "dom-to-image": "^2.6.0",
     "export-from-json": "^1.7.2",
