--- a/dp2-frontend/package.json
+++ b/dp2-frontend/package.json
@@ -35,6 +35,7 @@
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.8.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "simplebar-react": "^3.2.4",
