--- a/dp2-frontend/package.json
+++ b/dp2-frontend/package.json
@@ -19,6 +19,7 @@
     "bootstrap-icons": "^1.10.5",
     "chart.js": "^4.3.0",
     "classnames": "^2.3.2",
+    "date-fns": "^2.30.0",
     "dom-to-image": "^2.6.0",
     "export-from-json": "^1.7.2",
     "formik": "^2.2.9",
