--- a/dp2-frontend/.env.development
+++ b/dp2-frontend/.env.development
@@ -1,2 +1,2 @@
 # ENVIRONMENT GLOBAL VARIABLES IN DEV MODE
-BACKEND_URL='http://localhost:8000/'
+BACKEND_URL='http://jqikkqy40h.execute-api.us-east-1.amazonaws.com/dev/api/v1'
