--- a/dp2-frontend/package.json
+++ b/dp2-frontend/package.json
@@ -45,6 +45,7 @@
     "react-router-dom": "^6.10.0",
     "react-toastify": "^9.1.3",
     "simplebar-react": "^3.2.4",
+    "styled-components": "^6.0.3",
     "uuid": "^9.0.0",
     "vite-tsconfig-paths": "^4.2.0",
     "zod": "^3.21.4"
