--- a/dp2-frontend/package.json
+++ b/dp2-frontend/package.json
@@ -27,6 +27,7 @@
     "jspdf": "^2.5.1",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
+    "mdbreact": "^5.2.0",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
@@ -35,6 +36,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.8.0",
@@ -43,6 +45,7 @@
     "react-router-dom": "^6.10.0",
     "react-toastify": "^9.1.3",
     "simplebar-react": "^3.2.4",
+    "styled-components": "^6.0.4",
     "uuid": "^9.0.0",
     "vite-tsconfig-paths": "^4.2.0",
     "zod": "^3.21.4"
